[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["mbarak <marek.barak@dgo.sk>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pandas = "^1.2.1"
pyro-ppl = "^1.5.1"
altair = "^4.1.0"
arviz = "^0.11.0"
jupyterlab = "^3.0.5"
jupyterlab-kite = ">=2.0.2"
tables = "^3.6.1"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
